--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="card">
         <div class="search">
-            <input type="text" name="" id="searcBox" placeholder="Enter City Name" spellcheck="false">
+            <input type="text" name="" id="searchBox" placeholder="Enter City Name" spellcheck="false">
             <button id="searchButton"><img src="images/search.png" alt="">
             </button>
         </div>
@@ -39,5 +39,6 @@
             </div>
         </div>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
